--- a/html/Index.html
+++ b/html/Index.html
@@ -5,45 +5,21 @@
     <?!= HtmlService.createHtmlOutputFromFile('Css').getContent(); ?>
   </head>
   <body>
+    <? var config = getConfig(); ?>
     <div class="container">
-      <div>Hello, World!</div>
-      <div id="output"></div>
-      <form>
+      <form onsubmit="handleFormSubmit(this, '<?= mode ?>')">
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email address</label
-          >
+          <label for="slackBotToken" class="form-label">Slack Bot Token</label>
           <input
-            type="email"
+            id="slackBotToken"
+            type="text"
+            name="slackBotToken"
             class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-          />
-          <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else.
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
+            placeholder="xoxb-... or xoxp-..."
+            value="<?= config.slackBotToken ?>"
           />
         </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-          <label class="form-check-label" for="exampleCheck1"
-            >Check me out</label
-          >
-        </div>
-        <button
-          type="submit"
-          class="btn btn-primary"
-          onclick="google.script.host.close()"
-        >
-          Submit
-        </button>
+        <input class="btn btn-primary" type="submit" value="Save" />
       </form>
     </div>
     <?!= HtmlService.createHtmlOutputFromFile('Js').getContent(); ?>
